--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@ version: '3.3'
 
 services:
   dataapi:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: dataapi
     ports:
       - "80:80"
     environment:
       - NAME=World
     volumes:
-      - .:/app
+      - .:/DataAPI
     networks:
       - app-network
 
